fix: add presets for borders and spacings (#757)

--- a/packages/studio/styled-system/global.css
+++ b/packages/studio/styled-system/global.css
@@ -55,7 +55,7 @@
   }
 
   body {
-    margin: 0;
+    margin: var(--spacing-0);
     min-height: 100vh;
   }
 }
