--- a/packages/studio/styled-system/tokens/index.css
+++ b/packages/studio/styled-system/tokens/index.css
@@ -1,5 +1,6 @@
 @layer tokens {
   :where(:root, :host) {
+    --borders-none: none;
     --easings-default: cubic-bezier(0.4, 0, 0.2, 1);
     --easings-linear: linear;
     --easings-in: cubic-bezier(0.4, 0, 1, 1);
@@ -73,6 +74,7 @@
     --blurs-xl: 24px;
     --blurs-2xl: 40px;
     --blurs-3xl: 64px;
+    --spacing-0: 0rem;
     --spacing-1: 0.25rem;
     --spacing-2: 0.5rem;
     --spacing-3: 0.75rem;
@@ -106,6 +108,7 @@
     --spacing-1\.5: 0.375rem;
     --spacing-2\.5: 0.625rem;
     --spacing-3\.5: 0.875rem;
+    --sizes-0: 0rem;
     --sizes-1: 0.25rem;
     --sizes-2: 0.5rem;
     --sizes-3: 0.75rem;
